Configure babel and jest to work with `require.context`
After upgrade to Storybook 4-5 versions, tests started to fall because `require.context`
is no longer supported in jest, so we need to make the following steps to read storybook config in test environment:
1) Add babel plugin to transpile `require.context` to `__requireContext` only in test env
2) Add setup script for jest to register function `__requireContext`

I have noticed a lot of rule duplucation in .babelrc file, so I refactored it to js config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
-    "jest": "BABEL_ENV=default jest --bail --no-cache",
+    "jest": "BABEL_ENV=test jest --bail --no-cache",
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
@@ -64,6 +64,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.8.0",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
