--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@kupibilet/react-dates": "^12.3.0",
     "@kupibilet/react-day-picker": "^7.2.5",
     "@kupibilet/react-media": "^1.5.1",
+    "@storybook/addon-storysource": "^5.0.11",
     "jest-specific-snapshot": "^2.0.0",
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.4.6",
