--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/addon-centered": "^5.0.11",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-notes": "^5.0.11",
     "@storybook/addon-options": "^5.0.11",
     "@storybook/addon-storyshots": "^5.0.11",
     "@storybook/addon-storysource": "^5.0.11",
