--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
-    "jest": "BABEL_ENV=default jest --bail --no-cache",
+    "jest": "BABEL_ENV=test jest --bail --no-cache",
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
@@ -42,26 +42,29 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "~5.3.23",
     "@kupibilet/moment": "^0.0.3",
-    "@storybook/addon-centered": "^3.4.11",
-    "@storybook/addon-info": "^3.4.11",
-    "@storybook/addon-knobs": "^3.4.11",
-    "@storybook/addon-options": "^3.4.11",
-    "@storybook/addon-storyshots": "^3.4.11",
-    "@storybook/addons": "^3.4.11",
-    "@storybook/react": "^3.4.11",
+    "@storybook/addon-centered": "^5.0.11",
+    "@storybook/addon-info": "^5.0.11",
+    "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-options": "^5.0.11",
+    "@storybook/addon-storyshots": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.8.0",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
@@ -97,6 +100,7 @@
     "@kupibilet/react-dates": "^12.3.0",
     "@kupibilet/react-day-picker": "^7.2.5",
     "@kupibilet/react-media": "^1.5.1",
+    "jest-specific-snapshot": "^2.0.0",
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.4.6",
     "react-autosuggest": "^9.0.0",
