Storybook: organize stories, configure addons, fix knobs (#342)
* Configure storybook addons (#339)

* Add storysource storybook addon for viewing story source code

* Move dev dependencies to devDependencies section

* Add viewport storybook addon for viewing component on different screen sizes

* Hide source in Info addon

* Get rid of old Info addon and use Notes addon in storybook

* Fix knobs addon functionality for updating UI by interacting with it

* Organazing stories (#341)

* Organase stories into groups: BLOCKS and COMPONENTS

* Update snapshot titles

* Clear all tracks of info addon

--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "@kupibilet/icons": "~5.3.23",
     "@kupibilet/moment": "^0.0.3",
     "@storybook/addon-centered": "^5.0.11",
-    "@storybook/addon-info": "^5.0.11",
     "@storybook/addon-knobs": "^5.0.11",
+    "@storybook/addon-notes": "^5.0.11",
     "@storybook/addon-options": "^5.0.11",
     "@storybook/addon-storyshots": "^5.0.11",
+    "@storybook/addon-storysource": "^5.0.11",
+    "@storybook/addon-viewport": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-core": "^7.0.0-bridge.0",
@@ -74,6 +76,7 @@
     "glob": "^7.1.2",
     "husky": "^1.1.0",
     "jest": "^24.5.0",
+    "jest-specific-snapshot": "^2.0.0",
     "jest-styled-components": "^6.2.1",
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.4",
@@ -100,7 +103,6 @@
     "@kupibilet/react-dates": "^12.3.0",
     "@kupibilet/react-day-picker": "^7.2.5",
     "@kupibilet/react-media": "^1.5.1",
-    "jest-specific-snapshot": "^2.0.0",
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.4.6",
     "react-autosuggest": "^9.0.0",
