--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "semver": "^5.4.1",
     "styled-components": "^3.2.5",
     "versionize": "^1.0.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "babel-plugin-import": "^1.12.0"
   },
   "dependencies": {
     "@kupibilet/react-dates": "^12.3.0",
