--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "// Sequrity patches": "",
     "js-yaml": "3.13.1",
     "lodash": "^4.17.14",
-    "lodash-es": "^4.17.14"
+    "lodash-es": "^4.17.14",
+    "set-value": "^2.0.1",
+    "mixin-deep": "^2.0.1"
   },
   "greenkeeper": {
     "lockfiles": {
