--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "6.1.5",
   "description": "UI kit for kupibilet web app",
   "scripts": {
-    "pretest": "yarn lint:js && yarn lint:css",
-    "test": "yarn jest",
+    "lint": "yarn lint:js && yarn lint:css",
     "prestart": "scripts/check-engines.js",
     "start": "BABEL_ENV=default start-storybook -p 9001 -c .storybook",
     "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
-    "jest": "BABEL_ENV=test jest --bail --no-cache",
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
@@ -62,17 +60,15 @@
     "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "~5.3.23",
     "@kupibilet/moment": "^0.0.3",
-    "@storybook/addon-centered": "^5.0.11",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-notes": "^5.0.11",
-    "@storybook/addon-options": "^5.0.11",
-    "@storybook/addon-storyshots": "^5.0.11",
-    "@storybook/addon-storysource": "^5.0.11",
-    "@storybook/addon-viewport": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
+    "@storybook/addon-centered": "^5.2.6",
+    "@storybook/addon-docs": "^5.2.6",
+    "@storybook/addon-knobs": "^5.2.6",
+    "@storybook/addon-storyshots": "^5.2.6",
+    "@storybook/addon-storysource": "^5.2.6",
+    "@storybook/addon-viewport": "^5.2.6",
+    "@storybook/addons": "^5.2.6",
+    "@storybook/react": "^5.2.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
@@ -86,9 +82,6 @@
     "flow-copy-source": "^2.0.4",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
-    "jest": "^24.5.0",
-    "jest-specific-snapshot": "^2.0.0",
-    "jest-styled-components": "^6.2.1",
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.14",
     "mkp": "^1.0.1",
@@ -120,6 +113,7 @@
     "rc-tabs": "9.6.4",
     "react-autosuggest": "^9.0.0",
     "react-portal": "^4.1.4",
+    "react-router-dom": "^5.1.2",
     "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
