--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "babel-plugin-styled-components": "^1.8.0",
     "chalk": "^2.1.0",
     "classnames": "~2.2.5",
-    "eslint-config-kupibilet": "^11.0.0",
+    "eslint-config-kupibilet": "12.0.3",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "flow-bin": "^0.82.0",
     "flow-copy-source": "^2.0.4",
@@ -113,7 +113,7 @@
     "rc-tabs": "9.6.4",
     "react-autosuggest": "^9.0.0",
     "react-portal": "^4.1.4",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
