--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "@kupibilet/react-media": "^1.5.1",
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.6.4",
-    "react-autosuggest": "10.0.0",
+    "react-autosuggest": "^10.0.0",
     "react-portal": "^4.1.4",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^4.1.1",
