--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "rc-collapse": "^1.9.0",
     "rc-tabs": "9.6.4",
     "react-autosuggest": "^10.0.0",
+    "react-intl": "^4.6.9",
     "react-portal": "^4.1.4",
     "react-router-dom": "^4.2.2",
     "react-visibility-sensor": "^4.1.1",
