--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,13 @@
 *
+
 !blocks/**/*.js
 !components/**/*.js
 !utils/**/*.js
+
+!blocks/**/*.d.ts
+!components/**/*.d.ts
+!utils/**/*.d.ts
+
 **/*stories*
 **/*test*
 flow-typed
