--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "start": "BABEL_ENV=default start-storybook -p 9001 -c .storybook",
     "build-storybook": "BABEL_ENV=default build-storybook",
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
-    "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\"",
+    "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\" \"./src/**/*.ts\" \"./src/**/*.tsx\"",
+    "tsc": "tsc",
     "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
-    "build": "yarn build:es && yarn build:flow",
-    "build:es": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test",
+    "build": "yarn build:es && yarn build:flow && yarn build:typescript-types",
+    "build:es": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test --extensions '.js','.ts','.tsx'",
     "build:flow": "flow-copy-source -v src ./",
+    "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
     "//": "---        NPM hooks section        ---",
@@ -40,7 +42,8 @@
     "lodash": "^4.17.14",
     "lodash-es": "^4.17.14",
     "set-value": "^2.0.1",
-    "mixin-deep": "^2.0.1"
+    "mixin-deep": "^2.0.1",
+    "@types/react": "^17.0.0"
   },
   "greenkeeper": {
     "lockfiles": {
@@ -54,9 +57,11 @@
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.12.11",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/types": "^7.12.12",
     "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "~5.5.14",
     "@kupibilet/moment": "^0.0.3",
@@ -68,6 +73,11 @@
     "@storybook/addon-viewport": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
@@ -78,6 +88,7 @@
     "classnames": "~2.2.5",
     "eslint-config-kupibilet": "12.0.3",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
+    "eslint-plugin-import": "^2.22.1",
     "flow-bin": "^0.82.0",
     "flow-copy-source": "^2.0.4",
     "glob": "^7.1.2",
@@ -101,6 +112,7 @@
     "semver": "^5.4.1",
     "snyk": "^1.173.1",
     "styled-components": "^4.3.2",
+    "typescript": "^4.1.3",
     "versionize": "^1.0.6",
     "whatwg-fetch": "^3.0.0"
   },
