Migrate NavBar to TypeScript

--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "@babel/types": "^7.12.12",
     "@emotion/core": "^10.0.10",
     "@kupibilet/icons": "~5.5.14",
-    "moment": "^2.29.1",
     "@storybook/addon-docs": "^6.1.15",
     "@storybook/addon-knobs": "^6.1.15",
     "@storybook/addon-storyshots": "^6.1.15",
     "@storybook/addon-storysource": "^6.1.15",
     "@storybook/addon-viewport": "^6.1.15",
     "@storybook/addons": "^6.1.15",
+    "@storybook/client-api": "^6.1.21",
     "@storybook/react": "^6.1.15",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
@@ -101,6 +101,7 @@
     "lint-staged": "^7.2.0",
     "lodash": "^4.17.14",
     "mkp": "^1.0.1",
+    "moment": "^2.29.1",
     "move-binaries-to-bin": "~1.0.1",
     "polished": "^2.2.0",
     "prop-types": "^15.6.0",
@@ -138,9 +139,9 @@
   },
   "peerDependencies": {
     "@kupibilet/icons": "~5.1.0",
-    "moment": "^2.29.1",
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
+    "moment": "^2.29.1",
     "polished": "^1.3.0",
     "prop-types": "^15.6.0",
     "react": "^15.5.0 || ^16.3.0",
