--- a/package.json
+++ b/package.json
@@ -127,12 +127,12 @@
     "@kupibilet/react-day-picker": "^7.2.5",
     "@kupibilet/react-media": "^1.5.1",
     "@types/classnames": "^2.2.11",
+    "rc-slider": "^9.7.1",
     "rc-tabs": "^11.7.3",
     "react-autosuggest": "^10.0.0",
     "react-portal": "^4.1.4",
     "react-router-dom": "^5.2.0",
     "react-visibility-sensor": "^4.1.1",
-    "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
