--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "redux-logger": "^3.0.6",
     "semver": "^5.4.1",
     "snyk": "^1.173.1",
-    "styled-components": "^5.2.1",
+    "styled-components": "4.4.0",
     "typescript": "^4.1.3",
     "versionize": "^1.0.6",
     "whatwg-fetch": "^3.0.0"
