--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "@types/react-autosuggest": "^10.1.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
