--- a/package.json
+++ b/package.json
@@ -146,6 +146,6 @@
     "react-addons-shallow-compare": "~15.5.2",
     "react-dom": "^15.5.0 || ^16.3.0",
     "react-onclickoutside": "^6.4.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "4.4.0"
   }
 }
