--- a/package.json
+++ b/package.json
@@ -130,6 +130,8 @@
     "react-autosuggest": "^10.0.0",
     "react-portal": "^4.1.4",
     "react-router-dom": "^5.2.0",
+    "react-visibility-sensor": "^4.1.1",
+    "rheostat": "^2.1.3",
     "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
