--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "rc-slider": "^9.7.1",
     "rc-tabs": "^11.7.3",
     "react-autosuggest": "^10.0.0",
+    "react-day-picker": "^7.4.10",
     "react-portal": "^4.1.4",
     "react-router-dom": "^5.2.0",
     "section-iterator": "^2.0.0"
