--- a/package.json
+++ b/package.json
@@ -133,7 +133,8 @@
     "react-router-dom": "^5.2.0",
     "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
-    "section-iterator": "^2.0.0"
+    "section-iterator": "^2.0.0",
+    "utility-types": "^3.10.0"
   },
   "peerDependencies": {
     "@kupibilet/icons": "~5.1.0",
