--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@storybook/react": "^6.1.15",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
+    "@types/react-autosuggest": "^10.1.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-onclickoutside": "^6.7.3",
     "@types/react-portal": "^4.0.2",
@@ -80,7 +81,6 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
-    "@types/react-autosuggest": "^10.1.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^24.1.2",
@@ -133,8 +133,7 @@
     "react-router-dom": "^5.2.0",
     "react-visibility-sensor": "^4.1.1",
     "rheostat": "^2.1.3",
-    "section-iterator": "^2.0.0",
-    "utility-types": "^3.10.0"
+    "section-iterator": "^2.0.0"
   },
   "peerDependencies": {
     "@kupibilet/icons": "~5.1.0",
