remove Flow.js from UI kit

--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "lint:css": "echo \"TODO: Fix stylelint. kupibilet-frontend/ui#1\" >&2 && exit 0; stylelint ./src/components/**/*.js",
     "lint:js": "BABEL_ENV=default eslint \"./src/**/*.js\" \"./src/**/*.ts\" \"./src/**/*.tsx\"",
     "tsc": "tsc",
-    "flow": "flow",
     "versionize": "versionize",
     "prebuild": "scripts/check-engines.js",
-    "build": "yarn build:es && yarn build:flow && yarn build:typescript-types",
+    "build": "yarn build:es && yarn build:typescript-types",
     "build:es": "BABEL_ENV=esmodules NODE_ENV=production babel src/ -d ./ --ignore stories,test --extensions '.js','.ts','.tsx'",
-    "build:flow": "flow-copy-source -v src ./",
     "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
@@ -56,7 +54,6 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@babel/types": "^7.12.12",
@@ -83,7 +80,6 @@
     "@typescript-eslint/parser": "^4.13.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-flow-react-proptypes": "^24.1.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.12.0",
@@ -93,8 +89,6 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "eslint-plugin-import": "^2.22.1",
-    "flow-bin": "^0.82.0",
-    "flow-copy-source": "^2.0.4",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
     "lint-staged": "^7.2.0",
