--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
         "map": [
           ["components", "./src/components"],
           ["utils", "./src/utils"],
+          ["hooks", "./src/hooks"],
           ["storybook", "./storybook"]
         ],
         "extensions": [".ts", ".tsx", ".js"]
