--- a/package.json
+++ b/package.json
@@ -119,10 +119,13 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "@kupibilet/react-media": "^1.5.1",
+    "@popperjs/core": "^2.9.2",
     "@types/classnames": "^2.2.11",
+    "memoize-one": "^5.1.1",
     "rc-slider": "^9.7.1",
     "rc-tabs": "^11.7.3",
     "react-autosuggest": "^10.0.0",
+    "react-popper": "^2.2.5",
     "react-portal": "^4.1.4",
     "react-router-dom": "^5.2.0",
     "react-visibility-sensor": "^4.1.1",
