--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@kupibilet/react-media": "^1.5.1",
     "@popperjs/core": "^2.9.2",
     "@types/classnames": "^2.2.11",
+    "memoize-one": "^5.1.1",
     "rc-slider": "^9.7.1",
     "rc-tabs": "^11.7.3",
     "react-autosuggest": "^10.0.0",
