--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-babel-module": "^5.0.0-beta.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "glob": "^7.1.2",
     "husky": "^1.1.0",
     "lint-staged": "^7.2.0",
