--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:typescript-types": "tsc --noEmit false --emitDeclarationOnly",
     "watch": "yarn build --watch",
     "snyk": "snyk test --dev --severity-threshold=medium",
+    "tokens": "style-dictionary build --config ./style-dictionary/config.json",
     "//": "---        NPM hooks section        ---",
     "postinstall": "move-bin; true",
     "prepublishOnly": "yarn build"
@@ -110,7 +111,8 @@
     "styled-components": "4.4.0",
     "typescript": "^4.1.3",
     "versionize": "^1.0.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "style-dictionary": "3.0.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
