--- a/style-dictionary/tokens/base/size.json5
+++ b/style-dictionary/tokens/base/size.json5
@@ -3,7 +3,7 @@
         "borderRadius": {
             "small": {
                 "default": {
-                    "value": "4"
+                    "value": "4px"
                 }
             },
             "medium": {
