--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "rc-tabs": "^11.7.3",
     "react-autosuggest": "^10.0.0",
     "react-hook-form": "^7.12.2",
+    "react-media": "^1.10.0",
     "react-popper": "^2.2.5",
     "react-portal": "^4.1.4",
     "react-router-dom": "^5.2.0",
